fixvisiblityissues

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  background-color: #001e59;
+  background-color: cadetblue;
 }
 
 * {
